--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
   <main>
     <h1>Vanilla JavaScript App</h1>
-    <h2>hola....</h2>
+    <h2>hola.... ya estamos en linea</h2>
+
   </main>
 </body>
 
