--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
 </head>
 
 <body>
+    <header>
+            <h1>
+                <a href="#">iDESWEB</a>
+            </h1>
+
+            <form action="">
+                <label for="buscar">Buscar</label>
+                <input type="text" id="buscar">
+                <button>+</button>
+            </form>
+    </header>
   <main>
     <h1>Vanilla JavaScript App</h1>
     <h2>hola.... ya estamos en linea</h2>
